# leptos_rerender_issue

./: Cargo.toml  Trunk.toml  index.html
src/: app.rs  main.rs
