[package]
name = "leptos_rerender_issue"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos", features = ["csr"] }
reactive_stores = { git = "https://github.com/leptos-rs/leptos", package = "reactive_stores" }
reactive_stores_macro = { git = "https://github.com/leptos-rs/leptos", package = "reactive_stores_macro" }
# leptos = { path = "/home/mahdi/Projects/GitHub/leptos/leptos", features = ["csr"] }
# reactive_stores = { path = "/home/mahdi/Projects/GitHub/leptos/reactive_stores" }
# reactive_stores_macro = { path = "/home/mahdi/Projects/GitHub/leptos/reactive_stores_macro" }

console_log = "1"
log = "0.4.22"
console_error_panic_hook = "0.1.7"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
strip = true
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-04"]
